--- a/test.html
+++ b/test.html
@@ -142,44 +142,44 @@ main{position:relative;z-index:2}
 <main id="gallery">
   <!-- Stage 1 -->
   <div class="stage">
-  <img src="Pics/00567245-ABE5-4CE2-B856-B841E4AD9075_1_105_c.jpeg" alt="صورة 1" loading="lazy">
-  <img src="Pics/0237B5F8-1DE2-4B73-A5D2-E73B2AC3501C_1_105_c.jpeg" alt="صورة 2" loading="lazy">
-  <img src="Pics/0AA9466A-3E00-4F98-BDB8-6504C14D9535_1_105_c.jpeg" alt="صورة 3" loading="lazy">
-  <img src="Pics/0E04ABB4-11A6-466D-BDDF-8FCC745461FD_1_105_c.jpeg" alt="صورة 4" loading="lazy">
-  <img src="Pics/21C53E3E-31D5-4633-99A7-8C02261D2F70_1_105_c.jpeg" alt="صورة 5" loading="lazy" class="large">
-  <img src="Pics/34F160DC-9A01-4543-914B-690F6F34E9CD_1_105_c.jpeg" alt="صورة 6" loading="lazy">
-  <img src="Pics/3684802D-B09A-40A2-B688-7E6193D2AFC8_1_105_c.jpeg" alt="صورة 7" loading="lazy" class="wide">
-  <img src="Pics/57E1447E-6DDA-4BDA-B377-9FC2F6B61BE6_1_105_c.jpeg" alt="صورة 8" loading="lazy">
-  <img src="Pics/5A27E161-B010-438B-ABE3-BC63092A7200_1_105_c.jpeg" alt="صورة 9" loading="lazy">
-  <img src="Pics/5DF57B2A-CA2A-481D-8363-3C493FEDE46A_1_105_c.jpeg" alt="صورة 10" loading="lazy">
-  <img src="Pics/637854B8-0C52-4385-B1F9-78380885600F_4_5005_c.jpeg" alt="صورة 11" loading="lazy">
-  <img src="Pics/68E83A3E-B848-42D2-BBEA-F89C1F2BD18B_1_105_c.jpeg" alt="صورة 12" loading="lazy">
+  <img src="thumbnails/00567245-ABE5-4CE2-B856-B841E4AD9075_1_105_c.jpeg" data-src="Pics/00567245-ABE5-4CE2-B856-B841E4AD9075_1_105_c.jpeg" alt="صورة 1" class="lazy" loading="lazy">
+  <img src="thumbnails/0237B5F8-1DE2-4B73-A5D2-E73B2AC3501C_1_105_c.jpeg" data-src="Pics/0237B5F8-1DE2-4B73-A5D2-E73B2AC3501C_1_105_c.jpeg" alt="صورة 2" class="lazy" loading="lazy">
+  <img src="thumbnails/0AA9466A-3E00-4F98-BDB8-6504C14D9535_1_105_c.jpeg" data-src="Pics/0AA9466A-3E00-4F98-BDB8-6504C14D9535_1_105_c.jpeg" alt="صورة 3" class="lazy" loading="lazy">
+  <img src="thumbnails/0E04ABB4-11A6-466D-BDDF-8FCC745461FD_1_105_c.jpeg" data-src="Pics/0E04ABB4-11A6-466D-BDDF-8FCC745461FD_1_105_c.jpeg" alt="صورة 4" class="lazy" loading="lazy">
+  <img src="thumbnails/21C53E3E-31D5-4633-99A7-8C02261D2F70_1_105_c.jpeg" data-src="Pics/21C53E3E-31D5-4633-99A7-8C02261D2F70_1_105_c.jpeg" alt="صورة 5" class="lazy large" loading="lazy">
+  <img src="thumbnails/34F160DC-9A01-4543-914B-690F6F34E9CD_1_105_c.jpeg" data-src="Pics/34F160DC-9A01-4543-914B-690F6F34E9CD_1_105_c.jpeg" alt="صورة 6" class="lazy" loading="lazy">
+  <img src="thumbnails/3684802D-B09A-40A2-B688-7E6193D2AFC8_1_105_c.jpeg" data-src="Pics/3684802D-B09A-40A2-B688-7E6193D2AFC8_1_105_c.jpeg" alt="صورة 7" class="lazy wide" loading="lazy">
+  <img src="thumbnails/57E1447E-6DDA-4BDA-B377-9FC2F6B61BE6_1_105_c.jpeg" data-src="Pics/57E1447E-6DDA-4BDA-B377-9FC2F6B61BE6_1_105_c.jpeg" alt="صورة 8" class="lazy" loading="lazy">
+  <img src="thumbnails/5A27E161-B010-438B-ABE3-BC63092A7200_1_105_c.jpeg" data-src="Pics/5A27E161-B010-438B-ABE3-BC63092A7200_1_105_c.jpeg" alt="صورة 9" class="lazy" loading="lazy">
+  <img src="thumbnails/5DF57B2A-CA2A-481D-8363-3C493FEDE46A_1_105_c.jpeg" data-src="Pics/5DF57B2A-CA2A-481D-8363-3C493FEDE46A_1_105_c.jpeg" alt="صورة 10" class="lazy" loading="lazy">
+  <img src="thumbnails/637854B8-0C52-4385-B1F9-78380885600F_4_5005_c.jpeg" data-src="Pics/637854B8-0C52-4385-B1F9-78380885600F_4_5005_c.jpeg" alt="صورة 11" class="lazy" loading="lazy">
+  <img src="thumbnails/68E83A3E-B848-42D2-BBEA-F89C1F2BD18B_1_105_c.jpeg" data-src="Pics/68E83A3E-B848-42D2-BBEA-F89C1F2BD18B_1_105_c.jpeg" alt="صورة 12" class="lazy" loading="lazy">
   </div>
   <!-- Stage 3: additional local images from Pics/ -->
   <div class="stage">
-  <img src="Pics/D64A8309-BE55-45EA-9FF5-7EC3669A10C1_1_105_c.jpeg" alt="صورة 25" loading="lazy">
-  <img src="Pics/EAD63F0F-0A08-4CF9-8034-A44449415513_1_105_c.jpeg" alt="صورة 26" loading="lazy">
-  <img src="Pics/EE61001F-5BA5-4E5F-8CC5-69C548C993BB_1_105_c.jpeg" alt="صورة 27" loading="lazy">
-  <img src="Pics/F0E24295-617E-4817-A316-EEB435BB210A_1_105_c.jpeg" alt="صورة 28" loading="lazy">
-  <img src="Pics/F7E37445-17F7-4BA3-B589-C76D4ACBF2E0_1_105_c.jpeg" alt="صورة 29" loading="lazy">
-  <img src="Pics/F8317FBF-DFE4-43D2-8521-DA4368F9800E_1_105_c.jpeg" alt="صورة 30" loading="lazy">
-  <img src="Pics/FD417B31-D5E3-4653-9CE4-EB518448418C_1_105_c.jpeg" alt="صورة 31" loading="lazy">
-  <img src="Pics/637854B8-0C52-4385-B1F9-78380885600F_4_5005_c.jpeg" alt="صورة 32" loading="lazy">
+  <img src="thumbnails/D64A8309-BE55-45EA-9FF5-7EC3669A10C1_1_105_c.jpeg" data-src="Pics/D64A8309-BE55-45EA-9FF5-7EC3669A10C1_1_105_c.jpeg" alt="صورة 25" class="lazy" loading="lazy">
+  <img src="thumbnails/EAD63F0F-0A08-4CF9-8034-A44449415513_1_105_c.jpeg" data-src="Pics/EAD63F0F-0A08-4CF9-8034-A44449415513_1_105_c.jpeg" alt="صورة 26" class="lazy" loading="lazy">
+  <img src="thumbnails/EE61001F-5BA5-4E5F-8CC5-69C548C993BB_1_105_c.jpeg" data-src="Pics/EE61001F-5BA5-4E5F-8CC5-69C548C993BB_1_105_c.jpeg" alt="صورة 27" class="lazy" loading="lazy">
+  <img src="thumbnails/F0E24295-617E-4817-A316-EEB435BB210A_1_105_c.jpeg" data-src="Pics/F0E24295-617E-4817-A316-EEB435BB210A_1_105_c.jpeg" alt="صورة 28" class="lazy" loading="lazy">
+  <img src="thumbnails/F7E37445-17F7-4BA3-B589-C76D4ACBF2E0_1_105_c.jpeg" data-src="Pics/F7E37445-17F7-4BA3-B589-C76D4ACBF2E0_1_105_c.jpeg" alt="صورة 29" class="lazy" loading="lazy">
+  <img src="thumbnails/F8317FBF-DFE4-43D2-8521-DA4368F9800E_1_105_c.jpeg" data-src="Pics/F8317FBF-DFE4-43D2-8521-DA4368F9800E_1_105_c.jpeg" alt="صورة 30" class="lazy" loading="lazy">
+  <img src="thumbnails/FD417B31-D5E3-4653-9CE4-EB518448418C_1_105_c.jpeg" data-src="Pics/FD417B31-D5E3-4653-9CE4-EB518448418C_1_105_c.jpeg" alt="صورة 31" class="lazy" loading="lazy">
+  <img src="thumbnails/637854B8-0C52-4385-B1F9-78380885600F_4_5005_c.jpeg" data-src="Pics/637854B8-0C52-4385-B1F9-78380885600F_4_5005_c.jpeg" alt="صورة 32" class="lazy" loading="lazy">
   </div>
   <!-- Stage 2 -->
   <div class="stage">
-  <img src="Pics/7275D664-4EF1-45E8-BB7F-5D05A5770683_1_105_c.jpeg" alt="صورة 13" loading="lazy">
-  <img src="Pics/834EAD3A-4621-40E7-8364-59763F00AD01_1_105_c.jpeg" alt="صورة 14" loading="lazy">
-  <img src="Pics/83682745-9F21-4EC1-BBFC-B4419B8249F8_1_105_c.jpeg" alt="صورة 15" loading="lazy">
-  <img src="Pics/876D0489-365A-4CB2-9497-688440CBED15_1_105_c.jpeg" alt="صورة 16" loading="lazy">
-  <img src="Pics/90FF6F0F-2D5E-4DF3-B561-0E8281D73178_1_105_c.jpeg" alt="صورة 17" loading="lazy" class="large">
-  <img src="Pics/91BFCFB6-625A-40AB-B45C-010405D3050D_1_105_c.jpeg" alt="صورة 18" loading="lazy">
-  <img src="Pics/949A9DAD-A8E1-468D-A23E-8B313332FE24_1_105_c.jpeg" alt="صورة 19" loading="lazy" class="wide">
-  <img src="Pics/94E5EE6A-6D95-4370-B822-BC524FA98F62_1_105_c.jpeg" alt="صورة 20" loading="lazy">
-  <img src="Pics/A8C9453A-F48D-4012-B1CC-93E70E0B951E_1_105_c.jpeg" alt="صورة 21" loading="lazy">
-  <img src="Pics/AB320E20-53F4-4FC3-A663-AADEE0A799E0_1_105_c.jpeg" alt="صورة 22" loading="lazy">
-  <img src="Pics/B6CD6328-D343-42A9-8ADF-545441B27709_1_105_c.jpeg" alt="صورة 23" loading="lazy">
-  <img src="Pics/CB553C58-625C-4A9B-8B39-CBD7085B6035_1_105_c.jpeg" alt="صورة 24" loading="lazy">
+  <img src="thumbnails/7275D664-4EF1-45E8-BB7F-5D05A5770683_1_105_c.jpeg" data-src="Pics/7275D664-4EF1-45E8-BB7F-5D05A5770683_1_105_c.jpeg" alt="صورة 13" class="lazy" loading="lazy">
+  <img src="thumbnails/834EAD3A-4621-40E7-8364-59763F00AD01_1_105_c.jpeg" data-src="Pics/834EAD3A-4621-40E7-8364-59763F00AD01_1_105_c.jpeg" alt="صورة 14" class="lazy" loading="lazy">
+  <img src="thumbnails/83682745-9F21-4EC1-BBFC-B4419B8249F8_1_105_c.jpeg" data-src="Pics/83682745-9F21-4EC1-BBFC-B4419B8249F8_1_105_c.jpeg" alt="صورة 15" class="lazy" loading="lazy">
+  <img src="thumbnails/876D0489-365A-4CB2-9497-688440CBED15_1_105_c.jpeg" data-src="Pics/876D0489-365A-4CB2-9497-688440CBED15_1_105_c.jpeg" alt="صورة 16" class="lazy" loading="lazy">
+  <img src="thumbnails/90FF6F0F-2D5E-4DF3-B561-0E8281D73178_1_105_c.jpeg" data-src="Pics/90FF6F0F-2D5E-4DF3-B561-0E8281D73178_1_105_c.jpeg" alt="صورة 17" class="lazy large" loading="lazy">
+  <img src="thumbnails/91BFCFB6-625A-40AB-B45C-010405D3050D_1_105_c.jpeg" data-src="Pics/91BFCFB6-625A-40AB-B45C-010405D3050D_1_105_c.jpeg" alt="صورة 18" class="lazy" loading="lazy">
+  <img src="thumbnails/949A9DAD-A8E1-468D-A23E-8B313332FE24_1_105_c.jpeg" data-src="Pics/949A9DAD-A8E1-468D-A23E-8B313332FE24_1_105_c.jpeg" alt="صورة 19" class="lazy wide" loading="lazy">
+  <img src="thumbnails/94E5EE6A-6D95-4370-B822-BC524FA98F62_1_105_c.jpeg" data-src="Pics/94E5EE6A-6D95-4370-B822-BC524FA98F62_1_105_c.jpeg" alt="صورة 20" class="lazy" loading="lazy">
+  <img src="thumbnails/A8C9453A-F48D-4012-B1CC-93E70E0B951E_1_105_c.jpeg" data-src="Pics/A8C9453A-F48D-4012-B1CC-93E70E0B951E_1_105_c.jpeg" alt="صورة 21" class="lazy" loading="lazy">
+  <img src="thumbnails/AB320E20-53F4-4FC3-A663-AADEE0A799E0_1_105_c.jpeg" data-src="Pics/AB320E20-53F4-4FC3-A663-AADEE0A799E0_1_105_c.jpeg" alt="صورة 22" class="lazy" loading="lazy">
+  <img src="thumbnails/B6CD6328-D343-42A9-8ADF-545441B27709_1_105_c.jpeg" data-src="Pics/B6CD6328-D343-42A9-8ADF-545441B27709_1_105_c.jpeg" alt="صورة 23" class="lazy" loading="lazy">
+  <img src="thumbnails/CB553C58-625C-4A9B-8B39-CBD7085B6035_1_105_c.jpeg" data-src="Pics/CB553C58-625C-4A9B-8B39-CBD7085B6035_1_105_c.jpeg" alt="صورة 24" class="lazy" loading="lazy">
   </div>
 </main>
 
@@ -215,7 +215,7 @@ function monitorJank(durationMs=600, thresholdMs=40){
   requestAnimationFrame(tick);
 }
 // --- Three.js stars background (copied from index.html) ---
-(function(){
+function initStars(){
   const canvas = document.getElementById('canvas-bg');
   const scene = new THREE.Scene();
   scene.fog = new THREE.FogExp2(0x000000,0.0002);
@@ -312,43 +312,71 @@ function monitorJank(durationMs=600, thresholdMs=40){
   animate();
 
   window.addEventListener('resize', ()=>{ camera.aspect = window.innerWidth/window.innerHeight; camera.updateProjectionMatrix(); renderer.setSize(window.innerWidth, window.innerHeight); });
+}
 
-})();
-
-// --- GSAP ScrollTrigger animations ---
-gsap.registerPlugin(ScrollTrigger);
+// Delay heavy init until after load to reduce contention during first paint
 window.addEventListener('load', ()=>{
-  document.querySelectorAll('.stage img').forEach((img,index)=>{
-    // reveal once and don't reverse when scrolling away
-    gsap.from(img, {
-      opacity:0, y:24,
-      scrollTrigger: {
-        trigger: img,
-        start: 'top bottom',
-        end: 'top 60%',
-        toggleActions: 'play none none none',
-        once: true
-      },
-      duration: 0.7,
-      ease: 'power3.out',
-      delay: (index%6)*0.03
-    });
-    // Subtle floating for variety, works with dynamic sizing
-    if(Math.random()>0.6){
-      gsap.to(img,{
-        y: "-=" + (6 + Math.random()*8),
-        yoyo: true,
-        repeat: -1,
-        duration: 5 + Math.random()*6,
-        ease: "sine.inOut"
-      });
-    }
-  });
-  // refresh ScrollTrigger in case images affected layout
-  ScrollTrigger.refresh();
+  try{ initStars(); }catch(err){ console.warn('initStars failed', err); }
 });
 
-// --- Simple Lightbox Overlay ---
+// --- GSAP ScrollTrigger & lazy/floating init ---
+gsap.registerPlugin(ScrollTrigger);
+
+// Floating animation helper - create a looping tween and store marker on element
+function applyFloatingIfEligible(img){
+  if(img._floatingApplied) return;
+  img._floatingApplied = true;
+  if(Math.random()>0.6){
+    gsap.to(img,{
+      y: "-=" + (6 + Math.random()*8),
+      yoyo: true,
+      repeat: -1,
+      duration: 5 + Math.random()*6,
+      ease: "sine.inOut"
+    });
+  }
+}
+
+// IntersectionObserver to lazy-load large images from data-src and trigger reveal + floating
+const lazyImages = document.querySelectorAll('img.lazy');
+const lazyObserver = new IntersectionObserver((entries, obs) => {
+  entries.forEach(entry => {
+    const img = entry.target;
+    if(entry.isIntersecting){
+      // swap in large image src from data-src (but keep thumbnail as immediate src until large loads)
+      const large = img.dataset && img.dataset.src;
+      if(large){
+        const big = new Image();
+        big.src = large;
+        big.onload = () => {
+          img.src = large;
+          img.classList.remove('lazy');
+          obs.unobserve(img);
+          // reveal animation using GSAP
+          gsap.fromTo(img, {opacity:0, y:18}, {opacity:1, y:0, duration:0.7, ease:'power3.out'});
+          applyFloatingIfEligible(img);
+        };
+        big.onerror = () => {
+          // if load fails, still remove lazy to avoid retry loops
+          img.classList.remove('lazy');
+          obs.unobserve(img);
+        };
+      } else {
+        // no data-src, still reveal and apply floating
+        gsap.fromTo(img, {opacity:0, y:18}, {opacity:1, y:0, duration:0.7, ease:'power3.out'});
+        applyFloatingIfEligible(img);
+        obs.unobserve(img);
+      }
+    }
+  });
+}, {rootMargin: '300px 0px 300px 0px', threshold: 0.01});
+
+lazyImages.forEach(img => lazyObserver.observe(img));
+
+// Refresh ScrollTrigger after a small delay to account for swapped image sizes
+window.addEventListener('load', ()=>{ setTimeout(()=>ScrollTrigger.refresh(), 600); });
+
+// --- Simple Lightbox Overlay (loads large image on demand) ---
 const lightbox = document.getElementById('lightbox');
 let activeImgEl = null;
 
@@ -358,30 +386,37 @@ document.querySelectorAll('.stage img').forEach(img => {
   img.style.cursor = 'pointer';
 });
 
-function showLightbox(src, alt) {
+function showLightboxFromThumb(thumbImg) {
   // Remove any previous image
   lightbox.innerHTML = '';
-  // Create the image
+  const largeSrc = thumbImg.dataset && thumbImg.dataset.src ? thumbImg.dataset.src : thumbImg.src;
   const img = document.createElement('img');
   img.className = 'lightbox-img';
-  img.src = src;
-  img.alt = alt || '';
+  img.src = ''; // start blank so we can fade in when loaded
+  img.alt = thumbImg.alt || '';
   img.style.opacity = '0';
   activeImgEl = img;
   lightbox.appendChild(img);
-  // Show overlay
+  // Show overlay first (dims background)
   lightbox.classList.add('show');
-  // Animate fade-in
-  if (img.complete && img.naturalWidth) {
-    gsap.to(img, { opacity: 1, duration: 0.32, ease: 'power2.out' });
-  } else {
-    img.onload = () => {
-      gsap.to(img, { opacity: 1, duration: 0.32, ease: 'power2.out' });
-    };
-    img.onerror = () => {
-      img.style.opacity = '1';
-    };
-  }
+  // pause bg rendering during the reveal
+  if(window.bgControl && window.bgControl.isRunning && window.bgControl.pause) window.bgControl.pause();
+  // Load large image now
+  const big = new Image();
+  big.src = largeSrc;
+  big.onload = () => {
+    img.src = largeSrc;
+    // fade in the actual image
+    gsap.to(img, { opacity: 1, duration: 0.32, ease: 'power2.out', onComplete: () => {
+      if(window.bgControl && window.bgControl.resume) window.bgControl.resume();
+    }});
+  };
+  big.onerror = () => {
+    // fallback: show thumbnail immediately
+    img.src = thumbImg.src;
+    img.style.opacity = '1';
+    if(window.bgControl && window.bgControl.resume) window.bgControl.resume();
+  };
 }
 
 function hideLightbox() {
@@ -405,11 +440,11 @@ function hideLightbox() {
   }
 }
 
-// Click to open
+// Click to open (loads data-src if present)
 document.getElementById('gallery').addEventListener('click', (e) => {
   const img = e.target.closest('.stage img');
   if (!img) return;
-  showLightbox(img.src, img.alt);
+  showLightboxFromThumb(img);
 });
 // Keyboard open via Enter/Space
 document.getElementById('gallery').addEventListener('keydown', (e) => {
@@ -417,7 +452,7 @@ document.getElementById('gallery').addEventListener('keydown', (e) => {
   const img = e.target.closest && e.target.closest('.stage img') ? e.target : null;
   if (img) {
     e.preventDefault();
-    showLightbox(img.src, img.alt);
+    showLightboxFromThumb(img);
   }
 });
 // Click outside image closes overlay
