--- a/shadows.html
+++ b/shadows.html
@@ -140,6 +140,11 @@ body.lightbox-open .site-header{ pointer-events: none; opacity: 0.95; }
     <a class="site-logo" href="index.html" aria-label="العودة إلى الصفحة الرئيسية">
       <span class="site-word">Belevision</span>
     </a>
+    <!-- Quick nav links -->
+    <nav aria-label="Site navigation" style="position:absolute;right:18px;top:12px;display:flex;gap:12px;">
+      <a href="notbook.html" style="color:var(--text);text-decoration:none;font-weight:600;">دفتر</a>
+      <a href="index.html" style="color:var(--text);text-decoration:none;font-weight:600;">الرئيسية</a>
+    </nav>
   </div>
 </header>
 <canvas id="canvas-bg"></canvas>
